--- a/razuberisamples/src/main/res/values/strings.xml
+++ b/razuberisamples/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">RazuberiSamples</string>
+    <string name="app_name">Razuberi Sample</string>
 </resources>
