--- a/razuberisamples/src/main/res/values/strings.xml
+++ b/razuberisamples/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Razuberi Sample</string>
+    <string name="screen_a">Screen A</string>
+    <string name="any_text_here">Any text here</string>
+    <string name="screen_b">Screen B</string>
+    <string name="option_1">Option 1</string>
+    <string name="option_2">Option 2</string>
+    <string name="option_3">Option 3</string>
+    <string name="screen_c">Screen C</string>
+    <string name="next">Next</string>
 </resources>
